--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -73,3 +73,17 @@
     margin-bottom: 5vh;
   }
 }
+@media only screen and (max-height: 600px) {
+  .ageGroupIndivCat {
+    /* width: 70vw; */
+    height: 70vh;
+    margin-bottom: 5vh;
+  }
+}
+@media only screen and (max-height: 500px) {
+  .ageGroupIndivCat {
+    /* width: 70vw; */
+    height: auto;
+    margin-bottom: 5vh;
+  }
+}
