--- a/src/Components/Info/Info.css
+++ b/src/Components/Info/Info.css
@@ -13,3 +13,49 @@
 .infoP {
   font-family: sassoon;
 }
+
+.creditsH1 {
+  font-weight: bold;
+}
+
+.creditBubble {
+  width: 20vw;
+  text-align: center;
+  justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 20px;
+  border-radius: 15px;
+  margin: 20px;
+}
+
+.creditsGrid {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80vw;
+}
+
+@media only screen and (max-width: 1200px) {
+  .creditsGrid {
+    width: 90vw;
+  }
+
+  .creditBubble {
+    width: 30vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .creditsGrid {
+    width: 90vw;
+  }
+
+  .creditBubble {
+    width: 70vw;
+  }
+
+  .infoP {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
